                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.1
  *) [TS-1012] Eliminate proxy.config.http.append_xforwards_header, which
   is never used.
 
  *) [TS-1004] Transformation plugins cause connection close when content
   length is not known ahead. Author: Otto van der Schaaf.

  *) [TS-1011] Fixes for OpenSSL, specifically triggered for Solaris, but
   generally broken assumptions in the old code.

  *) [TS-989] Logging is now IPv6 compatible.

  *) [TS-1009] Disable starting ICP continuations if ICP is not enabled.

  *) [TS-1005] Use traffic_line for reload option with RC script.
   Author: Jan-Frode Myklebust.

  *) [TS-984] Log roll crash fixed.

  *) [TS-997] ATS crashes on remap plugin initialization failure.
   Author: Manjesh Nilange.

  *) [TS-988] Updated ICP for IPv6.

  *) [TS-994] Removed the extra splace from X-Forwarded-For.

  *) [TS-934] Added some wrapping around NetVConnection for server
   handling so that connection objects can be safely locked across
   threads.

  *) [TS-991] Fixed race / stall condition for WCCP during restart.

  *) [TS-985] ts/ts.h uses C++ comments, which are technically not C.

  *) [TS-928] Compile problem in TsErrataUtil on FreeBSD 8.

  *) [TS-973] Eliminate proxy.config.http.verbose_via_str.

  *) [TS-747] Add a new option, proxy.config.ssl.compression, to turn
   SSL compression on / off. This currently only works with OpenSSL
   v1.0.0 and later.

  *) [TS-963] Change the way ip_allow is parsed to be consistent with
   earlier versions (first match). Added default IPv6 allow. Added
   regression tests for the underlying IpMap class.

  *) [TS-948] Don't reload or load a broken remap.config.

  *) [TS-824] Range requests that result in cache refresh give 200 status
   response with full contents. Review and suggestions for improvements
   by Charlie Gero.

  *) [TS-964] Add 64-bit integer plugin APIs for HTTP headers.
